outputs/todoapp/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskflow-todo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: taskflow-todo
  template:
    metadata:
      labels:
        app: taskflow-todo
    spec:
      containers:
        - name: taskflow-todo
          image: mohanad898/taskflow-todo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /readyz
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
