outputs/todoapp/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskflow-todo
spec:
  type: ClusterIP
  selector:
    app: taskflow-todo
  ports:
    - name: http
      port: 80
      targetPort: 3000
